# my_mysql

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  CMakeUserPresets copy.json  COVERAGE.md  README.md  copilot-instructions.md  error_codes.ini  gen_error.py  iwyu-wrapper.sh  iwyu.md  iwyu_mappings.imp  run_all_tests.sh  t.js  vcpkg copy.json  vcpkg-configuration copy.json  vcpkg.json
.vscode.shared/: c_cpp_properties.json  launch.json  tasks.json
.zed/: tasks.json
bm/: CMakeLists.txt  parse_one_line_bm.cpp  simple_sakila_benchmark.cpp
config_dir/: application.develop.properties.tpl  ioc_config.json.tpl  log_config.json.tpl  mysql_config.develop.properties.tpl  mysql_config.json.tpl
db/: .env  .env_prod  .env_test.tpl  README.md  prod_migrate.sh
db/datasets/: README.md  sakila-minimal-data.sql
db/test_migrations/: 20250912000001_simple_test_schema.sql  20250912000002_sakila_schema.sql
include/: db_datastruct.hpp.to_delete  db_errors.hpp  mysql_base.hpp  mysql_config_provider.hpp  mysql_io_context.hpp  mysql_monad.hpp  openssl_thread_cleanup.hpp
my-triplets/: x64-linux-cpp20.cmake  x64-linux-dynamic-link-cpp20.cmake
scripts/: run_and_build.sh  run_coverage.sh
src/: dummpy.cpp  misc_util.cpp
tests/: CMakeLists.txt  my_mysql_test.cpp  sakila_integration_test.cpp
tests/include/: aliases.hpp  api_handler_base.hpp  base64.h  beast_connection_pool.hpp  client_pool_ssl.hpp  client_ssl_ctx.hpp  common_macros.hpp  db_resetter.hpp  explicit_instantiations.hpp.bak  http_client_async.hpp.bak  http_client_async.hpp.empty.bak  http_client_config_provider.hpp  http_client_manager.hpp  http_client_monad.hpp  http_session.hpp  http_session_pooled.hpp  httpclient_error_codes.hpp  i_output.hpp  in_flight_counter.hpp  io_context_manager.hpp  io_monad.hpp  ioc_manager_config_provider.hpp  ioc_provider.hpp  json_util.hpp  log_stream.hpp  misc_util.hpp  my_di_extension.hpp  pch.hpp  proxy_pool.hpp  resp_datastruct.hpp  result_monad.hpp  simple_data.hpp  test_injectors.hpp  test_openssl_env.hpp  tutil.hpp
tests/include/boost/: di.hpp  sml.hpp
tests/include/boost/di/extension/: injector.hpp
tests/include/boost/di/extension/bindings/: constructor_bindings.hpp  contextual_bindings.hpp
tests/include/boost/di/extension/injections/: assisted_injection.hpp  concepts.hpp  extensible_injector.hpp  factory.hpp  lazy.hpp  named_parameters.hpp  shared_factory.hpp  xml_injection.hpp
tests/include/boost/di/extension/policies/: serialize.hpp  types_dumper.hpp  uml_dumper.hpp
tests/include/boost/di/extension/providers/: heap.hpp  mocks_provider.hpp  runtime_provider.hpp
tests/include/boost/di/extension/scopes/: scoped.hpp  session.hpp  shared.hpp
tests/src/: base64.cpp  json_util.cpp  misc_util.cpp
